# warehouse

./: CMakeLists.txt
src/: interface_test.cpp  main.cpp  simplifier.cpp  simplifier.hpp
src/gui/: EndPage.h  MainPage.h  Preview.h  StartPage.h  asset_manager.hpp  start_page.h
src/gui/helpers/: Button.h  Element.h  HelpString.h  Helpers.h  List.h  RecordingWindow.h  Screen.h  Scroll.h  Table.h
src/interface/: debug.cpp  debug.hpp  exceptions.hpp  invoice.cpp  product.cpp  product.hpp  product_table.hpp  report.hpp  statistics.cpp  statistics.hpp  system.cpp  system.hpp
src/interface/managers/: accepting_manager.cpp  accepting_manager.hpp  manager.cpp  manager.hpp
src/interface/outlets/: order.hpp  outlet.cpp  outlet.hpp
src/interface/outlets/types/: cafe.cpp  cafe.hpp  market.cpp  market.hpp  school.cpp  school.hpp
src/interface/storage/: package.cpp  package.hpp  storage.cpp  storage.hpp
src/interface/supplier/: order.hpp  request.hpp  supplier.cpp  supplier.hpp
src/interface/suppliers/: request.cpp  request.hpp  supplier.cpp  supplier.hpp
